# trace

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pants.toml  pyproject.toml  ruff.toml  sync_reqs.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feat.yaml
tests/integration/: test_core.py
tests/type_mods/: test_dictionary.py
tests/unit/type_mods/: test_dictionary.py  test_singleton.py
trace/: __init__.py  plan.py  summary.py  trace.py  watcher.py
tracer/: core.py  mark.py
watch/: .gitignore  README.md  pants.toml  pyproject.toml  requirements.txt
watch/scripts/: generate_lockfile.sh
watch/src/: __init__.py  io.py  plan.py  trace.py  watcher.py
watch/src/backend/rust/: Cargo.toml
watch/src/interface/python/src/main/: configuration.py  export.py  main.py  relation.py  session.py
watch/src/interface/python/src/tests/: test_main.py
watch/src/io/: crud.py
watch/src/logic/: watcher.py
watch/src/python/src/main/: configuration.py  main.py  relation.py
watch/src/python/src/tests/: test_main.py
watch/src/type_mods/: dictionary.py  singleton.py
watch/tests/: test_watcher.py
watch/tests/integration/: BUILD  test_watcher.py
watch/tests/type_mods/: test_singleton.py
