[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geometra"
# authors = [{ name = "Stefan Dalecki", email = "sjdalecki@gmail.com" }]
description = "All `geometra` products and services"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
]


dependencies = ["pandas~=2.2", "varname~=0.13"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mock"]
