[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trace"]

[project]
name = "geometra"
version = "1.0.0"
authors = [
    { name = "Stefan Dalecki", email = "daleckidev@gmail.com" },
    { name = "Dan Kilcullen", email = "dkilcullen25@gmail.com" },
]
description = "All `geometra` products and services"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
]


dependencies = ["pandas~=2.2", "varname~=0.13"]

[dependency-groups]
# Don't tag these since they aren't packaged
dev = ["pre-commit", "pytest", "pytest-cov", "pytest-mock", "uv"]
