[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geometra"
# authors = [{ name = "Stefan Dalecki", email = "sjdalecki@gmail.com" }]name = "geometra"
description = "All `geometra` products and services"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["pandas>=2.2"]
dynamic = ["version"]
